--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
 version: 2.1
 
 workflows:
-  my-workflow:
+  build_and_test_deploy:
     jobs:
-      requires:
+      - build
+      - test:
+          requires:
             - build 
       - deploy:
           requires:
@@ -11,7 +13,6 @@ workflows:
           filters:
             branches:
               only: main
-          
 
 jobs:
   build:
