--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,12 @@
 version: 2.1
 workflows:
-  build_and_test_deploy:
+  version: 2
+  build-and-deploy:
     jobs:
       - build
-      - test:
-          requires:
-            - build 
       - deploy:
           requires:
-            - test
+            - build
           filters:
             branches:
               only: main
