--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
+
 workflows:
-  version: 2
-  build-and-test-deploy:
+  build_and_test_deploy:
     jobs:
       - build
       - test:
